organizar carpetas, arreglar clases en html y variables en css

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <!-- titulo -->
@@ -26,7 +20,7 @@
       <!-- factura total -->
       <div class="factura-total">
         <h3>Bill</h3>
-        <input type="text" placeholder="$">
+        <input class="placeholder-factura-total" type="text" placeholder="">
       </div>
       
       <!-- porcentajes propina -->
@@ -44,7 +38,7 @@
       <!-- numero de personas -->
       <div class="numero-personas">
         <h3>Number of People</h3>
-        <input type="text" placeholder="icon">
+        <input class="placeholder-numero-personas" type="text" placeholder="">
       </div>
       
     </section>
