iniciando el layout css

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- titulo -->
-  <h1 class="title">splitter</h1>
+  <h1 class="title">spli<br>tter</h1>
 
   <div class="container">
 
