mas estilos y layout

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <!-- titulo -->
   <h1 class="title">spli<br>tter</h1>
 
+  <!-- Tarjeta principal -->
   <div class="container">
 
     <!-- Section Entradas izquierda -->
@@ -67,11 +68,9 @@
 
   </div>
   
-  <footer class="footer">
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Eliab López</a>.
-    </div>
-  </footer>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Eliab López</a>.
+  </div>
 </body>
 </html>
