--- a/src/index.html
+++ b/src/index.html
@@ -53,14 +53,14 @@
 
       <!-- Cantidad propina por persona -->
       <div class="propina-persona">
-        <h3>Tip Amount<br>/ person</h3>
-        <h3>$4.27</h3>
+        <h3>Tip Amount<br><span>/ person</span></h3>
+        <h4>$0.00</h4>
       </div>
       
       <!-- propina total -->
       <div class="propina-total">
-        <h3>Total<br>/ person</h3>
-        <h3>$32.79</h3>
+        <h3>Total<br><span>/ person</span></h3>
+        <h4>$0.00</43>
       </div>
     
       <!-- boton reset -->
