funcinalidad y filtrado de botones

--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,13 @@
       <!-- Cantidad propina por persona -->
       <div class="propina-persona">
         <h3>Tip Amount<br><span>/ person</span></h3>
-        <h4>$0.00</h4>
+        <h4 class="tip-people">$0.00</h4>
       </div>
       
       <!-- propina total -->
       <div class="propina-total">
         <h3>Total<br><span>/ person</span></h3>
-        <h4>$0.00</43>
+        <h4 class="tip-total"">$0.00</h4>
       </div>
     
       <!-- boton reset -->
@@ -76,5 +76,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Eliab López</a>.
   </div>
+  <script src="./index.js"></script>
 </body>
 </html>
