--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
   <!-- titulo -->
-  <h1 class="title">spli<br>tter</h1>
+  <header>
+    <h1 class="title">spli<br>tter</h1>
+  </header>
 
   <!-- Tarjeta principal -->
-  <div class="container">
+  <main class="container">
 
     <!-- Section Entradas izquierda -->
     <section class="section-entradas">
@@ -70,12 +72,12 @@
 
     </section>
 
-  </div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Eliab López</a>.
-  </div>
+  </footer>
   <script src="./index.js"></script>
 </body>
 </html>
