--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/desktop.css" media="(min-width: 930px)">
   <title>Frontend Mentor | Tip calculator app</title>
 </head>
 <body>
   <!-- titulo -->
   <header>
-    <h1 class="title">spli<br>tter</h1>
+    <img src="../images/logo.svg" alt="Logo">
+    <!-- <h1 class="title">spli<br>tter</h1> -->
   </header>
 
   <!-- Tarjeta principal -->
