--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Eliab López</a>.
+    Coded by <a href="https://eliablm.github.io/EliabLM/">Eliab López</a>.
   </footer>
 
   <script src="./index.js"></script>
